@@ -1036,6 +1036,8 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Removed duplicate getenv() implementation in /lib
 	* Correct detection of End-of-File in fgets
 	* Implement sh and crude script handler in NSH
+	* Fix prototype of read() and write(). Need to use ssize_t and size_t, not
+	  int and unsigned int.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
